# OS

compilation/: readme.txt
compilation/task2/: hello_static.c  static_lib.c  static_lib.h
compilation/task3/: dynamic_lib.c  dynamic_lib.h  hello_dynamic.c
file_system/: readme.txt
file_system/task1/: reverse.c
file_system/task2/: file_system.c
file_system/task3/: map_parse.c
mythread/: CMakeLists.txt  build.sh  readme.txt
mythread/lib/: mythread.c  mythread.h
mythread/src/: main.c  mythread.c
network/: readme.txt
network/task1/: client.c  udp_server.c
network/task2/: tcp_server.c
network/task3/: client.c  select_tcp_server.c
process_address_space/: readme.txt
process_address_space/task1/: buffer.c  environment_vars.c  variables.c
process_address_space/task2/: cyclic_heap.c  execve.c  memory_regions.c  recursive_stack.c  unmap_region.c
process_address_space/task3/: selfmade_heap.c
processes/: readme.txt
processes/task1/: variables.c
processes/task2/: parent_zombie.c  zombie.c
processes/task3/: file_synchronization.c
proxy_multithreaded/: Makefile
proxy_multithreaded/include/: cache.h  proxy.h
proxy_multithreaded/src/: cache.c  main.c  proxy.c  proxy_connection.c
sync_list/: readme.txt
sync_list/mutex/: list.c  list.h  main.c
sync_list/rwlock/: Makefile  list.c  list.h  main.c
sync_list/spinlock/: list.c  list.h  main.c
sync_myprimitives/: readme.txt
sync_myprimitives/mymutex/: Makefile  list.c  list.h  main.c  (+2 more)
sync_primitives/: readme.txt
system_calls/: readme.txt
uthreads/: CMakeLists.txt  build.sh  uthreads
(+41 files in other folders)
